--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "Tab Overflow",
-  "description": "This is an extension for managin navigation with a large number by 'overflowing' excess tabs into an index tab.",
+  "description": "This is an extension for managing navigation with a large number by 'overflowing' excess tabs into an index tab.",
   "version": "1.0",
   "background": {
     "pesistent": "false",
