--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "scripts": ["background.js"]
   },
   "browser_action": {
-    "default_icon": "icon.png"
+    "default_icon": "icons/icon.png"
   },
   "permissions": [
     "tabs",
