--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
            "48": "./images/icon48.png",
           "128": "./images/icon128.png" },  
   "browser_action": {
-    "default_icon": "images/1con16.png"
+    "default_icon": "./images/icon16.png"
   },
   "permissions": [
     "tabs",
